# notes

./: .env.example  .env.seed  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  pwa-assets.config.ts  tsconfig.json  vite.config.ts
.changes/unreleased/: 1781792076-side-menu.md  1781792077-settings-modal.md  1781792078-privacy-policy.md  1781792079-theme-picker.md  1781802097-storage-backends.md  1781805113-declutter-note-list.md  1781805675-settings-tabs.md  1781806022-namespaces.md  1781808103-live-markdown-editor.md  1781808104-editor-settings.md  1781808105-empty-state-enter.md  1781808368-home-showcase.md  1781810105-mobile-editor-enter.md  1781814131-cloud-status-icon.md  1781814303-changelog-modal.md  1781814968-undo-redo.md  1781815200-cloud-sync-command-centre.md  1781817387-center-new-note-button.md  (+161 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: architecture.md  configuration.md  dictionary.md  getting-started.md  notesd-daemon-plan.md  overview.md  refactoring-roadmap.md  troubleshooting.md
native/: .gitignore  APP_STORE.md  README.md  RELEASING.md  app.json  eas.json  index.js  metro.config.js  package.json  tsconfig.json
notesd/: Cargo.toml  README.md
notesd/src/: auth.rs  config.rs  index.rs  lib.rs  main.rs  net.rs  qr.rs  secret.rs  server.rs  state.rs  store.rs  tls.rs
notesd/tests/: protocol.rs
public/: CNAME
scripts/: gen-native-icons.mjs
src/: build-env.ts  styles.css  vite-env.d.ts
(+382 files in other folders)
