[package]
name = "notesd"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
description = "Self-hosted daemon backend for the notes app — a fast, push-capable, security-first alternative to the cloud backends."
license = "MIT"
repository = "https://github.com/niclaslindstedt/notes"
readme = "README.md"

[[bin]]
name = "notesd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rustls = { version = "0.23", features = ["ring"] }
sha2 = "0.10"
subtle = "2"
rand = "0.8"
data-encoding = "2"
rcgen = "0.13"

notify = "6"
qr2term = "0.3"
local-ip-address = "0.6"
igd-next = { version = "0.15", features = ["aio_tokio"] }
mdns-sd = "0.11"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
